workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/OpportunityLineItem_Event__e.object-meta.xml
<CustomObject>
    <label>OpportunityLineItem Event</label>
    <pluralLabel>OpportunityLineItem Events</pluralLabel>
</CustomObject>