workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/AdesaoSeguro__c.field-meta.xml
<CustomField>
    <fullName>AdesaoSeguro__c</fullName>
    <label>AdesaoSeguro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>