workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/Agenciamento__c.field-meta.xml
<CustomField>
    <fullName>Agenciamento__c</fullName>
    <label>Agenciamento</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>