workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/Agravo__c.field-meta.xml
<CustomField>
    <fullName>Agravo__c</fullName>
    <label>Agravo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>