workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/Assessoria__c.field-meta.xml
<CustomField>
    <fullName>Assessoria__c</fullName>
    <label>Assessoria</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>