workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/CodigoOperacao__c.field-meta.xml
<CustomField>
    <fullName>CodigoOperacao__c</fullName>
    <label>CodigoOperacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>