workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/CusteioSegurado__c.field-meta.xml
<CustomField>
    <fullName>CusteioSegurado__c</fullName>
    <label>CusteioSegurado</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>