workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/CusteioSubestipulante__c.field-meta.xml
<CustomField>
    <fullName>CusteioSubestipulante__c</fullName>
    <label>CusteioSubestipulante</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>