workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>