workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/ImprimirCodigoOperacao__c.field-meta.xml
<CustomField>
    <fullName>ImprimirCodigoOperacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ImprimirCodigoOperacao</label>
    <type>Checkbox</type>
</CustomField>