workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioAnual__c.field-meta.xml
<CustomField>
    <fullName>PremioAnual__c</fullName>
    <label>PremioAnual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>