workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioComercialAnual__c.field-meta.xml
<CustomField>
    <fullName>PremioComercialAnual__c</fullName>
    <label>PremioComercialAnual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>