workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioComercialMensal__c.field-meta.xml
<CustomField>
    <fullName>PremioComercialMensal__c</fullName>
    <label>PremioComercialMensal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>