workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioMensal__c.field-meta.xml
<CustomField>
    <fullName>PremioMensal__c</fullName>
    <label>PremioMensal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>