workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioMontante__c.field-meta.xml
<CustomField>
    <fullName>PremioMontante__c</fullName>
    <label>PremioMontante</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>