workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioPuroAnual__c.field-meta.xml
<CustomField>
    <fullName>PremioPuroAnual__c</fullName>
    <label>PremioPuroAnual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>