workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioPuroMensal__c.field-meta.xml
<CustomField>
    <fullName>PremioPuroMensal__c</fullName>
    <label>PremioPuroMensal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>