workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/PremioTotalSeguro__c.field-meta.xml
<CustomField>
    <fullName>PremioTotalSeguro__c</fullName>
    <label>PremioTotalSeguro</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>