workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/ProLabore__c.field-meta.xml
<CustomField>
    <fullName>ProLabore__c</fullName>
    <label>ProLabore</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>