workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>ServiceDate</label>
    <type>Date</type>
</CustomField>