workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/TaxaComercial__c.field-meta.xml
<CustomField>
    <fullName>TaxaComercial__c</fullName>
    <label>TaxaComercial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>