workspace-sf/force-app/main/default/objects/OpportunityLineItem_Event__e/fields/TaxaPura__c.field-meta.xml
<CustomField>
    <fullName>TaxaPura__c</fullName>
    <label>TaxaPura</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>